@@ -57,7 +57,7 @@ module Fairy
   CONF.POOLQUEUE_POOL_THRESHOLD = 4000
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
-#CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
+CONF.FILEBUFFEREDQUEUE_THRESHOLD = 100000/2
 ##CONF.SORTEDQUEUE_THRESHOLD = 10000/2
 CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 #CONF.SORTEDQUEUE_THRESHOLD = 10
