@@ -75,6 +75,7 @@ module Fairy
       Log.logger = @logger
       Log::info self, "fairy connected!!"
       Log::info self, "\tfairy version: #{Version}"
+      Log::info(self, "\t[Powered By #{RUBY_DESCRIPTION}]") 
 
       @stdout_mutex = Mutex.new
 
